# AI-self-improvement-engine

./: .coverage  README.md  ast_utils.py  demo_advanced_feedback.py  engine_and_context.py  goals.json  main.py  model_and_refine.py  problem_identification_role.py  pyproject.toml  self_review_role.py  snapshot_store.py  temp.patch  test.json  test_autonomous_system.py  test_enhanced_system.py  test_mcp_integration.py  test_output.json  utils_review_analyzer.py
ai_self_ext_engine/tests/: test_config_removal.py
config/: engine_config.yaml
docs/: ai_self_extending_engine_pitch.md  contextandplan.txt  review_report.md  self_improvement_module_deep_dive.md
memory-bank/: activeContext.md  decisionLog.md  progress.md  projectContext.md
memory/adopt_dependency_management_tool/: 2025-07-14T05-31-44.778493.json  2025-07-14T05-34-57.458879.json  2025-07-14T05-37-39.023590.json  2025-07-14T05-40-04.439992.json  2025-07-14T05-44-30.026572.json  2025-07-14T05-48-37.174945.json  2025-07-14T05-49-00.327179.json  2025-07-14T05-49-38.428081.json  2025-07-14T06-03-49.587729.json  2025-07-14T06-09-25.496034.json  2025-07-24T01-09-17.053489.json  2025-07-24T01-31-24.804062.json  2025-07-24T02-12-16.018813.json
memory/auto_goal_1/: 2025-07-24T01-10-31.738219.json  2025-07-24T01-11-21.174697.json  2025-07-24T01-15-00.066339.json  2025-07-24T01-17-39.015355.json  2025-07-24T01-19-16.027605.json  2025-07-24T01-20-32.399644.json  2025-07-24T01-24-02.019187.json  2025-07-24T01-26-23.011661.json  2025-07-24T01-27-54.535779.json  2025-07-24T01-31-47.972329.json  2025-07-24T01-33-18.940161.json  2025-07-24T01-33-46.181130.json  2025-07-24T02-13-45.056944.json  2025-07-24T02-15-25.336248.json  2025-07-24T02-19-33.336806.json  2025-07-24T02-22-58.551310.json  2025-07-24T02-24-28.463292.json  2025-07-24T02-27-39.758334.json  2025-07-24T02-31-43.567435.json
memory/auto_goal_2/: 2025-07-24T01-10-47.365760.json  2025-07-24T01-12-16.210929.json  2025-07-24T01-15-40.396563.json  2025-07-24T01-18-08.002288.json  2025-07-24T01-19-47.407258.json  2025-07-24T01-21-03.927120.json  2025-07-24T01-24-49.654763.json  2025-07-24T01-26-51.008018.json  2025-07-24T01-28-35.846825.json  2025-07-24T01-32-17.549034.json  2025-07-24T02-14-30.596608.json  2025-07-24T02-17-10.513125.json  2025-07-24T02-20-44.258299.json  2025-07-24T02-23-23.262598.json  2025-07-24T02-27-05.956715.json  2025-07-24T02-29-23.787437.json  2025-07-24T02-32-38.393419.json
memory/auto_goal_3/: 2025-07-24T01-14-21.380435.json  2025-07-24T01-17-01.058448.json  2025-07-24T01-18-22.659909.json  2025-07-24T01-20-13.735078.json  2025-07-24T01-23-04.213721.json  2025-07-24T01-26-01.398509.json  2025-07-24T01-27-28.872697.json  2025-07-24T01-30-07.643335.json  2025-07-24T01-33-21.181229.json  2025-07-24T02-18-12.138141.json  2025-07-24T02-22-14.688921.json  2025-07-24T02-24-04.394656.json  2025-07-24T02-27-15.802479.json  2025-07-24T02-30-32.488273.json
memory/learning/: learning_log.jsonl
prompts/: goal_generation.tpl  patch_generation.tpl  problem_identification.tpl  self_review.tpl  test_generation.tpl
src/: config.py  goal_manager.py  model_client.py  snapshot_store.py
(+83 files in other folders)
